Fixing my server

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://media-exp1.licdn.com/dms/image/C4D0BAQHjtkPKC6OWRA/company-logo_200_200/0/1612540117028?e=2159024400&v=beta&t=GjOihCXdYMOPDWthdzYFe3dH9yC-MDWlNbM2sDzOZns" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Visitors management System</title>
   </head>
   <body>
     <div id="root"></div>
